fix: スマホで1.5倍サイズにし、横スクロールするように修正

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="main">
     <h1>原稿用紙デモ</h1>
-    <div class="manuscript_paper"></div>
+    <div class="manuscript_paper_wrap"></div>
 </div>
 
 </body>
