fix: canvasを使わずに実装するテスト

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <link rel="stylesheet" href="./css/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="./js/jcanvas.min.js" charset="utf-8"></script>
-<script src="./js/lib.js" charset="utf-8"></script>
+<!-- <script src="./js/lib.js" charset="utf-8"></script> -->
+<script src="./js/lib2.js" charset="utf-8"></script>
 
 <!--[if lt IE 9]>
 <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -22,6 +23,12 @@
 <div id="main">
     <h1>原稿用紙デモ</h1>
     <div class="manuscript_paper_wrap"></div>
+
+    <br>
+    <br>
+    <br>
+
+    <div contentEditable="true" class="manuscript_paper_input_wrap"></div>
 </div>
 
 </body>
