--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 <link rel="stylesheet" href="./css/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="./js/jcanvas.min.js" charset="utf-8"></script>
+<!-- <script src="./js/jcanvas.min.js" charset="utf-8"></script> -->
 <script src="./js/lib.js" charset="utf-8"></script>
 
 <!--[if lt IE 9]>
